# tantivy

./: .gitignore  Dockerfile.lambda_build  README.md  lambda_build.sh  package-lock.json  package.json
native/: Cargo.toml
native/src/: lib.rs
native/src/js_query_parser/: mod.rs
native/src/js_schema_builder/: mod.rs  sane_schema_builder.rs
native/src/js_search/: mod.rs  sane_search.rs
native/src/optional_types/: mod.rs
