[package]
name = "tantivy-js"
version = "0.1.3"
edition = "2021"
build = "build.rs"

[lib]
name = "tantivyjs"
crate-type = ["cdylib"]

[patch.crates-io]
neon-runtime = { git = 'https://github.com/jjpe/neon' }

[build-dependencies]
neon-build = "0.9.1"

[dependencies]
lazy_static = "1.4.0"
neon = "0.9.1"
neon-sys = "0.9.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
tantivy = "0.16.1"
tempdir = "0.3.7"